--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ locale: pt_PT
 description: a Software Developer from Portugal!
 logo: me.png
 search: false
-url: http://ricardocoutinho.me
+url: http://ricardocoutinho.github.io
 
 # Jekyll configuration
 
